service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-server-aks-ingress-service
  namespace: bill-test
spec:
  selector:
    app: flask-api-server-aks-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
