ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-server-aks-ingress
  namespace: bill-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
      - path: /server/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-api-server-aks-ingress-service
            port:
              number: 80
